Implementation of save settings fixed, darkmode added, bugfixes on start

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -227,3 +227,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/GooglePADEditor.GooglePADRuntimeSettings]
+bEnablePlugin=True
+
