Settings bugfix, implementation of Android development stuff

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -230,3 +230,16 @@ ManualIPAddress=
 [/Script/GooglePADEditor.GooglePADRuntimeSettings]
 bEnablePlugin=True
 
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+PackageName=com.storyforge.textadventure
+ApplicationDisplayName=Labyrinth der Heimsuchung Textadventure
+MinSDKVersion=21
+TargetSDKVersion=31
+bEnableBundle=True
+bEnableUniversalAPK=False
+bSaveSymbols=True
+KeyStore=upload-keystore.jks
+KeyAlias=Labyrinth der Heimsuchung Textadventure
+KeyStorePassword=Li9okargo0!
+KeyPassword=Li9okargo0!
+
