--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -48,14 +48,14 @@ SoundCueCookQualityIndex=-1
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Mobile
 AppliedTargetedHardwareClass=Mobile
-DefaultGraphicsPerformance=Scalable
-AppliedDefaultGraphicsPerformance=Scalable
+DefaultGraphicsPerformance=Maximum
+AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
 r.Mobile.AllowDeferredShadingOpenGL=False
 r.Mobile.SupportGPUScene=False
-r.Mobile.AntiAliasing=1
+r.Mobile.AntiAliasing=0
 r.Mobile.FloatPrecisionMode=0
 r.Mobile.AllowDitheredLODTransition=False
 r.Mobile.VirtualTextures=False
@@ -81,8 +81,8 @@ GreenChromaticityCoordinate=(X=0.300000,Y=0.600000)
 BlueChromaticityCoordinate=(X=0.150000,Y=0.060000)
 WhiteChromaticityCoordinate=(X=0.312700,Y=0.329000)
 r.ClearCoatNormal=False
-r.DynamicGlobalIlluminationMethod=1
-r.ReflectionMethod=1
+r.DynamicGlobalIlluminationMethod=0
+r.ReflectionMethod=0
 r.ReflectionCaptureResolution=128
 r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
 r.Lumen.HardwareRayTracing=False
@@ -97,7 +97,7 @@ r.PathTracing=True
 r.GenerateMeshDistanceFields=True
 r.DistanceFields.DefaultVoxelDensity=0.200000
 r.Nanite.ProjectEnabled=True
-r.AllowStaticLighting=True
+r.AllowStaticLighting=False
 r.NormalMapsForStaticLighting=False
 r.ForwardShading=False
 r.VertexFoggingForOpaque=True
@@ -109,7 +109,7 @@ xr.VRS.DynamicFoveation=False
 r.CustomDepth=1
 r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=0
-r.DefaultFeature.Bloom=False
+r.DefaultFeature.Bloom=True
 r.DefaultFeature.AmbientOcclusion=False
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
 r.DefaultFeature.AutoExposure=False
@@ -148,7 +148,7 @@ r.GBufferFormat=1
 r.MorphTarget.Mode=True
 r.GPUCrashDebugging=False
 vr.InstancedStereo=False
-r.MobileHDR=True
+r.MobileHDR=False
 vr.MobileMultiView=False
 r.Mobile.UseHWsRGBEncoding=False
 vr.RoundRobinOcclusion=False
@@ -203,8 +203,13 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 
 [/Script/Engine.UserInterfaceSettings]
 bAuthorizeAutomaticWidgetVariableCreation=False
-FontDPIPreset=Standard
+FontDPIPreset=Unreal
 FontDPI=72
+bUseCustomFontDPI=False
+CustomFontDPI=42
+DesignScreenSize=(X=1080,Y=1920)
+bAllowHighDPIInGameMode=True
+UIScaleRule=ShortestSide
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/TextAdventure")
@@ -234,7 +239,7 @@ bEnablePlugin=True
 PackageName=com.storyforge.textadventure
 ApplicationDisplayName=Labyrinth der Heimsuchung Textadventure
 MinSDKVersion=21
-TargetSDKVersion=31
+TargetSDKVersion=33
 bEnableBundle=True
 bEnableUniversalAPK=False
 bSaveSymbols=True
@@ -242,4 +247,9 @@ KeyStore=upload-keystore.jks
 KeyAlias=Labyrinth der Heimsuchung Textadventure
 KeyStorePassword=Li9okargo0!
 KeyPassword=Li9okargo0!
+StoreVersionOffsetX8664=0
+VersionDisplayName=1.1
+StoreVersionOffsetArm64=0
+StoreVersion=9
+Orientation=Portrait
 
