--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -209,7 +209,8 @@ bUseCustomFontDPI=False
 CustomFontDPI=42
 DesignScreenSize=(X=1080,Y=1920)
 bAllowHighDPIInGameMode=True
-UIScaleRule=ShortestSide
+UIScaleRule=Horizontal
+UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=1.000000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000,PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant),ExternalCurve=None)
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/TextAdventure")
@@ -249,7 +250,7 @@ KeyStorePassword=Li9okargo0!
 KeyPassword=Li9okargo0!
 StoreVersionOffsetX8664=0
 VersionDisplayName=1.1
-StoreVersionOffsetArm64=0
-StoreVersion=9
+StoreVersionOffsetArm64=4
+StoreVersion=18
 Orientation=Portrait
 
