--- a/TextAdventure.uproject
+++ b/TextAdventure.uproject
@@ -10,6 +10,11 @@
 			"TargetAllowList": [
 				"Editor"
 			]
+		},
+		{
+			"Name": "NarrativeCommonUI",
+			"Enabled": false,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/f1adaffd049b44cca254832b2beeb1b7"
 		}
 	],
 	"TargetPlatforms": [
