--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=30BB85A649FC3109F5D16BBD5938414C
 ProjectVersion=1.0.1.1
+CopyrightNotice=You can use the framework for your own use. However, if you copy the novel, I will probably hate you. Use your own text.
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=Always
