--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -240,7 +240,7 @@ bEnablePlugin=True
 PackageName=com.storyforge.textadventure
 ApplicationDisplayName=Labyrinth der Heimsuchung Textadventure
 MinSDKVersion=21
-TargetSDKVersion=33
+TargetSDKVersion=34
 bEnableBundle=True
 bEnableUniversalAPK=False
 bSaveSymbols=True
@@ -251,6 +251,7 @@ KeyPassword=Li9okargo0!
 StoreVersionOffsetX8664=0
 VersionDisplayName=1.1
 StoreVersionOffsetArm64=4
-StoreVersion=22
+StoreVersion=25
 Orientation=Portrait
+bShowLaunchImage=False
 
