--- a/TextAdventure.uproject
+++ b/TextAdventure.uproject
@@ -34,6 +34,10 @@
 		{
 			"Name": "VaRest",
 			"Enabled": true
+		},
+		{
+			"Name": "BlueprintFileUtils",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
